modify team name

--- a/utils/main.tex
+++ b/utils/main.tex
@@ -5,8 +5,8 @@
 
 \begin{document}
 
-\title{\Huge \bf Nonsense Time Reference Material}
-\author{Beihang University / Wu Junjie, Zhong Zihao, Deng Yixing}
+\title{\Huge \bf Intrepid Sword Reference Material}
+\author{Beihang University / Zhong Zihao, Peng Maoxiaomin, Wen Jiahao}
 % \date{\today}
 
 \maketitle
