--- a/utils/main.tex
+++ b/utils/main.tex
@@ -1,12 +1,18 @@
 \documentclass[a4paper]{article}
 \usepackage[lmargin=0.5in,rmargin=0.5in,tmargin=0.4in,bmargin=0.3in,footskip=1.1in,headsep=8pt,a4paper]{geometry}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    urlcolor=blue
+}
 
 \input{format.tex} % formatting template
 
 \begin{document}
 
-\title{\Huge \bf Intrepid Sword Reference Material}
-\author{Beihang University / Zhong Zihao, Peng Maoxiaomin, Wen Jiahao}
+\title{\Huge \bf Nonsense Time Reference Material}
+\author{Beihang University / Wu Junjie, Zhong Zihao, Deng Yixing}
 % \date{\today}
 
 \maketitle
