update team name and year

--- a/utils/format.tex
+++ b/utils/format.tex
@@ -28,7 +28,7 @@
 % \rhead{{\sf\thepage}}
 % \lhead{\kai ACM/ICPC Code Library}
 
-\fancyhead[L]{\sf\hei BUAA Nonsense Time}
+\fancyhead[L]{\sf\hei BUAA Tranquility}
 \fancyhead[C]{\sf\rightmark}
 \fancyhead[R]{\sf\thepage/\pageref{LastPage}}
 \fancyfoot{}
