--- a/utils/main.tex
+++ b/utils/main.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 
-\title{\Huge \bf Nonsense Time Reference Material}
+\title{\Huge \bf Tranquility Reference Material}
 \author{Beihang University / Wu Junjie, Zhong Zihao, Deng Yixing}
 % \date{\today}
 
